tests/NormalTests/paczka1/fuzzy1/41778252.err
Error in line 14: xGgKvzMw A393 -5,1
Error in line 11: 3UnsM A592 13,8
Error in line 12: 3agiBXYD9l A393 66,5
Error in line 3: xGgKvzMw A393 98,3
